[gd_scene load_steps=2 format=3 uid="uid://achievement_scene"]

[ext_resource type="Script" path="res://Scripts/AchievementScene.gd" id="1"]

[node name="AchievementScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "成就列表"
horizontal_alignment = 1

[node name="AchievementList" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -140.0
offset_right = 350.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AchievementList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 180.0
offset_right = 100.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
text = "返回"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
